# kanban

./: .pre-commit-config.yaml  LICENSE  README.rst  conftest.py  pyproject.toml
docs/sphinx/source/: Code.rst  conf.py
kanban/: Test.db  kanban.py  main.py
tests/: db_test.py
